--- a/package.json
+++ b/package.json
@@ -10,19 +10,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native-stack": "^6.6.1",
     "axios": "^0.26.1",
     "expo": "~44.0.0",
+    "expo-font": "^10.0.5",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-reanimated": "2.3.1",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
+    "react-navigation": "^4.4.4",
+    "react-navigation-drawer": "^2.7.2",
+    "react-navigation-stack": "^2.10.4",
+    "react-navigation-tabs": "^2.11.2",
     "react-redux": "^7.2.8",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "jetifier": "^2.0.0"
   },
   "private": true
 }
